--- a/assistant-common/pom.xml
+++ b/assistant-common/pom.xml
@@ -42,5 +42,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.ibeetl/beetl -->
+		<dependency>
+			<groupId>com.ibeetl</groupId>
+			<artifactId>beetl</artifactId>
+			<version>2.7.12</version>
+		</dependency>
 	</dependencies>
 </project>
